# upcr

./: AUTHORS  BUGS  COPYING  CREDITS  ChangeLog  FAQ  LICENSE.md  MANIFEST  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  aclocal.m4  autogen.sh  build.sh  config.h.in  configure  configure.ac  configure.scan  package.ld
boot/: Makefile.am  Makefile.in  acpi.c  banner.S  banner.c  blt.S  boot.h  call.S  data.S  data.c  efi.h  efi.inc  entry.S  exit.S  exit.c  footer.S  header.S  init.S  init.c  internal.h  kern.S  kern.c  macros.h  mmap.S  ram.c  start.c  start.s  vga.c
image/: Makefile.am  Makefile.in  coff.S  layout.ld  metadata.S
kernel/: Makefile.am  Makefile.in  acpi.asm  api.h  asm.h  boot.S  compat.h  con.asm  console.S  cpu.S  cpu.asm  data.S  err.asm  error.asm  gdt.S  gdt.asm  header.txt  idt.S  idt.asm  init.S  irq.S  irq.asm  kernel.h  lat.asm  license.txt  loc.S  loc.asm  lock.S  lock.asm  log.S  log.asm  macro.inc  page.S  paging.S  panic.S  pit.asm  ram.S  ram.asm  reg.asm  regs.asm  (+20 more)
ld/: binary.ld  package.ld
scripts/: build.sh  run.sh
