#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([UPCR], [21.09], [admin@ramses.ca])
AM_INIT_AUTOMAKE

# Checks for programs.
AM_PROG_AS
AC_PROG_CC
AC_PROG_MAKE_SET

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile
                 boot/Makefile
                 kernel/Makefile])

AC_OUTPUT
